--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Bookshelf</title>
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
   </head>
   <body>
     <h1>Bookshelf</h1>
+
+    <p>
+      Running node <script>document.write(process.versions.node)</script>,
+      Chrome <script>document.write(process.versions.chrome)</script>,
+      Electron <script>document.write(process.versions.electron)</script>.
+    </p>
   </body>
 </html>
