--- a/index.html
+++ b/index.html
@@ -1,18 +1,31 @@
 <!DOCTYPE html>
 <html lang="ru" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Bookshelf</title>
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-    <link rel="stylesheet" href="styles.css">
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="script-src 'self' 'unsafe-inline';"
+    />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1>Bookshelf</h1>
 
     <p>
-      Running node <script>document.write(process.versions.node)</script>,
-      Chrome <script>document.write(process.versions.chrome)</script>,
-      Electron <script>document.write(process.versions.electron)</script>.
+      Running node
+      <script>
+        document.write(process.versions.node);
+      </script>
+      , Chrome
+      <script>
+        document.write(process.versions.chrome);
+      </script>
+      , Electron
+      <script>
+        document.write(process.versions.electron);
+      </script>
+      .
     </p>
   </body>
 </html>
